[gd_scene load_steps=7 format=3 uid="uid://bfg27wn1tymf1"]

[ext_resource type="FontFile" uid="uid://cicppa12acwpw" path="res://resources/fonts/alagard.ttf" id="1_48qld"]
[ext_resource type="PackedScene" uid="uid://crhq4kqlvv2il" path="res://hall_of_heroes/hall_of_heroes_main_scroll_container.tscn" id="2_ho1ex"]
[ext_resource type="Script" path="res://hall_of_heroes/hall_of_heroes.gd" id="2_preky"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5i6ql"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_xcbng"]
default_font = ExtResource("1_48qld")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_5i6ql")

[sub_resource type="Theme" id="Theme_htck2"]
default_font_size = 36

[node name="HallOfHeroes" type="MarginContainer"]
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_xcbng")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("2_preky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 72)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_htck2")
text = "Hall of Heroes"
horizontal_alignment = 1

[node name="HallOfHeroesMainScrollContainer" parent="VBoxContainer" instance=ExtResource("2_ho1ex")]
layout_mode = 2

[node name="ReturnButton" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 2

[node name="Return" type="Label" parent="VBoxContainer/ReturnButton"]
layout_mode = 2
text = "Return"

[connection signal="mouse_entered" from="VBoxContainer/ReturnButton" to="." method="_on_return_button_mouse_entered"]
